--- a/Html/tecnologias.html
+++ b/Html/tecnologias.html
@@ -113,6 +113,31 @@
 
     </main>
 
+    <footer>
+        <div class="footer">
+
+            <div>
+                <h3>Developed by</h2>
+                <img src="../Images/Index/42WaysTech_logo.png" width="150px">
+            </div>
+
+            <div class="horizontalRule"></div>
+
+            <div class="contatos">
+                <div>
+                    <h3>Nos siga nas nossas redes sociais:</h2>
+                </div>
+
+                <div class="contatosN">
+                    <img class="selectContatos" src="../Images/Index/facebook_logo.png" width="50px">
+                    <img src="../Images/Index/instagram_logo.webp" width="50px">
+                    <img src="../Images/Index/twitter_logo.png" width="50px">
+                </div>
+            </div>
+        </div>
+
+    </footer>
+
 </body>
 
 </html>
