--- a/Html/no_mundo.html
+++ b/Html/no_mundo.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Futura AI - No Mundo</title>
 
-    <link href="../Css/style1.css" rel="stylesheet">
+    <link href="../Css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -27,11 +27,8 @@
                     <a class="menu" href="../Html/sobre_nos.html">Sobre nós</a>
                 </div>
             </div>
-
             <div class="divisor"></div>
-
         </div>
-
     </header>
 
     <main class="centerMain">
@@ -53,8 +50,6 @@
                     de fertilizantes e o controle de pragas. Essa abordagem tem ajudado os agricultores a tomar decisões
                     mais informadas e a alcançar melhores resultados na produção de alimentos.</p><br>
             </div>
-
-
         </div>
 
         <div class="frameBorder">
@@ -74,9 +69,7 @@
                 <br>
             </div>
             <div class="quadNoMundoImg2"></div>
-
         </div>
-
     </main>
 
     <footer>
@@ -101,9 +94,7 @@
                 </div>
             </div>
         </div>
-
     </footer>
-
 </body>
 
 </html>
