--- a/Html/sobre_nos.html
+++ b/Html/sobre_nos.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Futura AI - Sobre Nós</title>
 
-    <link href="../Css/style1.css" rel="stylesheet">
+    <link href="../Css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -29,12 +29,10 @@
             </div>
 
             <div class="divisor"></div>
-
         </div>
-
     </header>
-    <main class="centerMain">
 
+    <main class="centerMain">
         <div class="frameSobreNos">
             <div class="quadSobreNosImg1"></div>
 
@@ -55,9 +53,9 @@
                     menor recursos essenciais, como água, por exemplo.</p>
             </div>
         </div>
+
         <div class="team">
             <h2>Equipe</h2>
-
             <div class="containerTeamCards">
                 <div class="teamCard">
                     <div class="cardPhoto"></div>
