--- a/Html/recursos.html
+++ b/Html/recursos.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Futura AI - Recursos</title>
 
-    <link href="../Css/style1.css" rel="stylesheet">
+    <link href="../Css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -31,7 +31,6 @@
             <div class="divisor"></div>
 
         </div>
-
     </header>
 
     <main class="centerMain">
@@ -61,9 +60,7 @@
                         <button>Download</button>
                     </a>
                 </div>
-            </div>
-            
-
+            </div>         
         </div>
 
         <div class="frameBorder">
@@ -90,9 +87,7 @@
                 </div>
             </div>
             <div class="quad3Index"></div>
-
         </div>
-
     </main>
 
     <footer>
@@ -117,7 +112,6 @@
                 </div>
             </div>
         </div>
-
     </footer>
 
 </body>
