--- a/Html/tecnologias.html
+++ b/Html/tecnologias.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Futura AI - Tecnologias</title>
 
-    <link href="../Css/style1.css" rel="stylesheet">
+    <link href="../Css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -29,9 +29,7 @@
             </div>
 
             <div class="divisor"></div>
-
         </div>
-
     </header>
 
     <main class="centerMain">
@@ -61,7 +59,6 @@
                 </div>
             </div>
             <div class="quad3Index"></div>
-
         </div>
 
         <div class="frameBorder">
@@ -108,9 +105,7 @@
                 </div>
             </div>
             <div class="quad3Index"></div>
-
         </div>
-
     </main>
 
     <footer>
@@ -135,7 +130,6 @@
                 </div>
             </div>
         </div>
-
     </footer>
 
 </body>
