pagina Index finalizada e banner alterado

--- a/Html/index.html
+++ b/Html/index.html
@@ -25,6 +25,7 @@
                     <a class="menu" href="../Html/recursos.html">Recursos</a>
                     <a class="menu" href="../Html/no_mundo.html">No mundo</a>
                     <a class="menu" href="../Html/sobre_nos.html">Sobre nós</a>
+                    <a class="menu" href="../Html/contato.html">Contato</a>
                 </div>
             </div>
 
@@ -43,36 +44,30 @@
                 <h2>Um Desafio para o Mundo</h2>
                 <br>
                 <br>
-                <p>A população mundial vai aumentar nos próximos anos e a estimativa da ONU é que em 2050 a população
+                <p>A população mundial vai aumentar nos próximos anos, e a estimativa da ONU é que em 2050 a população
                     mundial chegue a quase 10 bilhões de pessoas. No entanto, as preocupações e os cuidados com isso
-                    começam hoje. E uma das perguntas a serem respondidas é: “Como vamos alimentar toda essa população
-                    sem aumentar exageradamente a área dedicada a agricultura já existente e sem piorar a situação
-                    climática do planeta.”. A resposta é complexa, e a estimativa é que necessitaríamos aumentar a
+                    começam hoje. E uma das perguntas a serem respondidas é: "Como vamos alimentar toda essa população
+                    sem aumentar exageradamente a área dedicada à agricultura já existente e sem piorar a situação
+                    climática do planeta?". A resposta é complexa, e a estimativa é que necessitaríamos aumentar a
                     produção de alimentos em mais de 70% com base no que produzimos hoje. Mas um dos pontos que ganha a
-                    atenção para ajudar a resolver esse problema, é sobre como podemos melhorar a eficiência de
-                    produção, e com isso, o uso das novas tecnologias de IA ganhão um papel bastante importante. Na
-                    verdade, as inteligências artificiais e o uso de outras tecnologias têm todo o poder para melhorar
-                    tanto na eficiência, quanto em ajudar a produzir mais alimentos, ocupando menos espaço e gastando
-                    menor recursos essenciais, como água, por exemplo.</p>
+                    atenção para ajudar a resolver esse problema é sobre como podemos melhorar a eficiência de produção,
+                    e com isso, o uso das novas tecnologias de IA ganham um papel bastante importante.</p>
             </div>
         </div>
 
         <div class="frameBorder">
             <div class="quad2">
-                <h2>Um Desafio para o Mundo</h2>
+                <h2>Tecnologias</h2>
                 <br>
                 <br>
-                <p>A população mundial vai aumentar nos próximos anos e a estimativa da ONU é que em 2050 a população
-                    mundial chegue a quase 10 bilhões de pessoas. No entanto, as preocupações e os cuidados com isso
-                    começam hoje. E uma das perguntas a serem respondidas é: “Como vamos alimentar toda essa população
-                    sem aumentar exageradamente a área dedicada a agricultura já existente e sem piorar a situação
-                    climática do planeta.”. A resposta é complexa, e a estimativa é que necessitaríamos aumentar a
-                    produção de alimentos em mais de 70% com base no que produzimos hoje. Mas um dos pontos que ganha a
-                    atenção para ajudar a resolver esse problema, é sobre como podemos melhorar a eficiência de
-                    produção, e com isso, o uso das novas tecnologias de IA ganhão um papel bastante importante. Na
-                    verdade, as inteligências artificiais e o uso de outras tecnologias têm todo o poder para melhorar
-                    tanto na eficiência, quanto em ajudar a produzir mais alimentos, ocupando menos espaço e gastando
-                    menor recursos essenciais, como água, por exemplo.</p><br>
+                <p>As tecnologias de inteligência artificial têm desempenhado um papel cada vez mais importante na
+                    agricultura, trazendo benefícios significativos para o meio ambiente, o desenvolvimento sustentável
+                    e a segurança alimentar diante do desafio da superpopulação prevista para 2050.</p>
+                <p><br>
+                    Essas tecnologias oferecem soluções inovadoras e eficientes para melhorar a produção agrícola.
+                    Através da análise de dados em tempo real, sensores e algoritmos avançados, a inteligência
+                    artificial permite o monitoramento preciso das condições do solo, umidade, nutrientes e pragas,
+                    possibilitando uma gestão mais precisa dos recursos agrícolas.</p><br><br>
 
                 <div class="centerButton">
                     <a href="tecnologias.html">
@@ -90,7 +85,7 @@
 
             <div>
                 <h3>Developed by</h2>
-                <img src="../Images/Index/42WaysTech_logo.png" width="150px">
+                    <img src="../Images/Index/42WaysTech_logo.png" width="150px">
             </div>
 
             <div class="horizontalRule"></div>
