--- a/Html/tecnologias.html
+++ b/Html/tecnologias.html
@@ -25,6 +25,7 @@
                     <a class="menu" href="../Html/recursos.html">Recursos</a>
                     <a class="menu" href="../Html/no_mundo.html">No mundo</a>
                     <a class="menu" href="../Html/sobre_nos.html">Sobre nós</a>
+                    <a class="menu" href="../Html/contato.html">Contato</a>
                 </div>
             </div>
 
@@ -33,78 +34,48 @@
     </header>
 
     <main class="centerMain">
-        <div class="banner bannerImage1"></div>
+        <div class="banner bannerImage2"></div>
 
         <div class="frame">
             <div class="quad2">
-                <h2>Um Desafio para o Mundo</h2>
+                <h2>Sistemas de monitoramento e controle</h2>
                 <br>
                 <br>
-                <p>A população mundial vai aumentar nos próximos anos e a estimativa da ONU é que em 2050 a população
-                    mundial chegue a quase 10 bilhões de pessoas. No entanto, as preocupações e os cuidados com isso
-                    começam hoje. E uma das perguntas a serem respondidas é: “Como vamos alimentar toda essa população
-                    sem aumentar exageradamente a área dedicada a agricultura já existente e sem piorar a situação
-                    climática do planeta.”. A resposta é complexa, e a estimativa é que necessitaríamos aumentar a
-                    produção de alimentos em mais de 70% com base no que produzimos hoje. Mas um dos pontos que ganha a
-                    atenção para ajudar a resolver esse problema, é sobre como podemos melhorar a eficiência de
-                    produção, e com isso, o uso das novas tecnologias de IA ganhão um papel bastante importante. Na
-                    verdade, as inteligências artificiais e o uso de outras tecnologias têm todo o poder para melhorar
-                    tanto na eficiência, quanto em ajudar a produzir mais alimentos, ocupando menos espaço e gastando
-                    menor recursos essenciais, como água, por exemplo.</p><br>
-
-                <div class="centerButton">
-                    <a href="tecnologias.html">
-                        <button>Ver mais</button>
-                    </a>
-                </div>
+                <p>Por meio de sensores, drones e imagens de satélite, a inteligência artificial é empregada para
+                    monitorar as condições do solo, identificar doenças e pragas, analisar a qualidade das plantas,
+                    entre outros. Com base nessas informações, algoritmos de IA podem fornecer recomendações precisas
+                    sobre o momento certo para irrigação, aplicação de fertilizantes e defensivos agrícolas, resultando
+                    em uma gestão mais eficiente e sustentável dos recursos.</p><br>
             </div>
-            <div class="quad3Index"></div>
+            <div class="quad1Tec"></div>
         </div>
 
         <div class="frameBorder">
-            <div class="quad1"></div>
+            <div class="quad2Tec"></div>
             <div class="quad2">
-                <h2>Um Desafio para o Mundo</h2>
+                <h2>Agricultura de precisão</h2>
                 <br>
                 <br>
-                <p>A população mundial vai aumentar nos próximos anos e a estimativa da ONU é que em 2050 a população
-                    mundial chegue a quase 10 bilhões de pessoas. No entanto, as preocupações e os cuidados com isso
-                    começam hoje. E uma das perguntas a serem respondidas é: “Como vamos alimentar toda essa população
-                    sem aumentar exageradamente a área dedicada a agricultura já existente e sem piorar a situação
-                    climática do planeta.”. A resposta é complexa, e a estimativa é que necessitaríamos aumentar a
-                    produção de alimentos em mais de 70% com base no que produzimos hoje. Mas um dos pontos que ganha a
-                    atenção para ajudar a resolver esse problema, é sobre como podemos melhorar a eficiência de
-                    produção, e com isso, o uso das novas tecnologias de IA ganhão um papel bastante importante. Na
-                    verdade, as inteligências artificiais e o uso de outras tecnologias têm todo o poder para melhorar
-                    tanto na eficiência, quanto em ajudar a produzir mais alimentos, ocupando menos espaço e gastando
-                    menor recursos essenciais, como água, por exemplo.</p>
+                <p> A agricultura de precisão utiliza técnicas avançadas de IA para mapear e monitorar variabilidades em
+                    uma mesma área agrícola, permitindo uma aplicação personalizada de insumos. Com base em dados
+                    coletados, como níveis de nutrientes, umidade do solo e índices de vegetação, algoritmos de IA podem
+                    otimizar a distribuição de recursos, reduzindo o desperdício e aumentando a produtividade de forma
+                    sustentável.</p>
             </div>
         </div>
 
         <div class="frame">
             <div class="quad2">
-                <h2>Um Desafio para o Mundo</h2>
+                <h2>Robótica agrícola</h2>
                 <br>
                 <br>
-                <p>A população mundial vai aumentar nos próximos anos e a estimativa da ONU é que em 2050 a população
-                    mundial chegue a quase 10 bilhões de pessoas. No entanto, as preocupações e os cuidados com isso
-                    começam hoje. E uma das perguntas a serem respondidas é: “Como vamos alimentar toda essa população
-                    sem aumentar exageradamente a área dedicada a agricultura já existente e sem piorar a situação
-                    climática do planeta.”. A resposta é complexa, e a estimativa é que necessitaríamos aumentar a
-                    produção de alimentos em mais de 70% com base no que produzimos hoje. Mas um dos pontos que ganha a
-                    atenção para ajudar a resolver esse problema, é sobre como podemos melhorar a eficiência de
-                    produção, e com isso, o uso das novas tecnologias de IA ganhão um papel bastante importante. Na
-                    verdade, as inteligências artificiais e o uso de outras tecnologias têm todo o poder para melhorar
-                    tanto na eficiência, quanto em ajudar a produzir mais alimentos, ocupando menos espaço e gastando
-                    menor recursos essenciais, como água, por exemplo.</p><br>
-
-                <div class="centerButton">
-                    <a href="tecnologias.html">
-                        <button>Ver mais</button>
-                    </a>
-                </div>
+                <p>A robótica agrícola combina a inteligência artificial com a automação para realizar tarefas
+                    específicas no campo. Robôs e máquinas autônomas equipados com algoritmos de aprendizado de máquina
+                    podem realizar a colheita, a poda de plantas, a semeadura e até mesmo a remoção de ervas daninhas de
+                    forma precisa e eficiente. Essa tecnologia reduz a dependência de mão de obra humana, aumenta a
+                    velocidade e a precisão das tarefas, além de reduzir o uso de agroquímicos.</p><br>
             </div>
-            <div class="quad3Index"></div>
+            <div class="quad3Tec"></div>
         </div>
     </main>
 
@@ -113,7 +84,7 @@
 
             <div>
                 <h3>Developed by</h2>
-                <img src="../Images/Index/42WaysTech_logo.png" width="150px">
+                    <img src="../Images/Index/42WaysTech_logo.png" width="150px">
             </div>
 
             <div class="horizontalRule"></div>
