--- a/Html/recursos.html
+++ b/Html/recursos.html
@@ -25,6 +25,7 @@
                     <a class="selectedMenu" href="../Html/recursos.html">Recursos</a>
                     <a class="menu" href="../Html/no_mundo.html">No mundo</a>
                     <a class="menu" href="../Html/sobre_nos.html">Sobre nós</a>
+                    <a class="menu" href="../Html/contato.html">Contato</a>
                 </div>
             </div>
 
@@ -34,59 +35,39 @@
     </header>
 
     <main class="centerMain">
-        <div class="banner bannerImage1"></div>
+        <div class="banner bannerImage3"></div>
 
         <div class="frame">
-            <div class="quad3Index"></div>
+            <div class="quadRecursosImg1"></div>
 
             <div class="quad2">
-                <h2>Um Desafio para o Mundo</h2>
+                <h2>Experimente nosso Software</h2>
                 <br>
                 <br>
-                <p>A população mundial vai aumentar nos próximos anos e a estimativa da ONU é que em 2050 a população
-                    mundial chegue a quase 10 bilhões de pessoas. No entanto, as preocupações e os cuidados com isso
-                    começam hoje. E uma das perguntas a serem respondidas é: “Como vamos alimentar toda essa população
-                    sem aumentar exageradamente a área dedicada a agricultura já existente e sem piorar a situação
-                    climática do planeta.”. A resposta é complexa, e a estimativa é que necessitaríamos aumentar a
-                    produção de alimentos em mais de 70% com base no que produzimos hoje. Mas um dos pontos que ganha a
-                    atenção para ajudar a resolver esse problema, é sobre como podemos melhorar a eficiência de
-                    produção, e com isso, o uso das novas tecnologias de IA ganhão um papel bastante importante. Na
-                    verdade, as inteligências artificiais e o uso de outras tecnologias têm todo o poder para melhorar
-                    tanto na eficiência, quanto em ajudar a produzir mais alimentos, ocupando menos espaço e gastando
-                    menor recursos essenciais, como água, por exemplo.</p><br>
+                <p>A Futura AI possui o seu próprio software, onde você tem uma série de recursos que podem ser usados
+                    de acordo com sua necessidade. Nele oferecemos a possibilidade de testar algumas automatizações que
+                    a tecnologia permite. Alguns dos recursos que podem ser simulados dentro da nossa aplicação são:</p>
+                <br>
+                <ul>
+                    <li><i>Recomendação de cultivo com base em fatores ambientais:</i> Com base nas
+                        condições do solo fornecido, a previsão de chuva anual e a temperatura média, fornecemos a
+                        cultura que seria mais adequada. </li><br>
+                    <li><i>Previsão de colheita:</i> Com base na colheita anterior e na demanda necessária, calculamos uma
+                        média de colheita ao longo do ano. </li><br>
+                    <li><i>Planejamento da cadeia produtiva:</i> Aqui você pode inserir os dados de produção, demanda e
+                        condições climáticas relevantes para o seu caso específico.</li><br>
+                    <li><i>Otimização do uso de insumos:</i> Neste programa, solicitamos ao usuário alguns dados necessários,
+                        como temperatura, umidade do solo, pH do solo e tipo de cultura. Com base nesses dados, a IA simula cálculos para determinar a quantidade ideal de água, fertilizante e
+                        pesticida a serem aplicados.</li><br>
+                </ul>
+                <br>
 
                 <div class="centerButton">
-                    <a href="tecnologias.html">
-                        <button>Download</button>
-                    </a>
-                </div>
-            </div>         
-        </div>
-
-        <div class="frameBorder">
-            <div class="quad2">
-                <h2>Um Desafio para o Mundo</h2>
-                <br>
-                <br>
-                <p>A população mundial vai aumentar nos próximos anos e a estimativa da ONU é que em 2050 a população
-                    mundial chegue a quase 10 bilhões de pessoas. No entanto, as preocupações e os cuidados com isso
-                    começam hoje. E uma das perguntas a serem respondidas é: “Como vamos alimentar toda essa população
-                    sem aumentar exageradamente a área dedicada a agricultura já existente e sem piorar a situação
-                    climática do planeta.”. A resposta é complexa, e a estimativa é que necessitaríamos aumentar a
-                    produção de alimentos em mais de 70% com base no que produzimos hoje. Mas um dos pontos que ganha a
-                    atenção para ajudar a resolver esse problema, é sobre como podemos melhorar a eficiência de
-                    produção, e com isso, o uso das novas tecnologias de IA ganhão um papel bastante importante. Na
-                    verdade, as inteligências artificiais e o uso de outras tecnologias têm todo o poder para melhorar
-                    tanto na eficiência, quanto em ajudar a produzir mais alimentos, ocupando menos espaço e gastando
-                    menor recursos essenciais, como água, por exemplo.</p><br>
-
-                <div class="centerButton">
-                    <a href="tecnologias.html">
+                    <a href="https://github.com/CaiqueMouraGit/GS-FuturaAI-Python-Program" target="_blank">
                         <button>Download</button>
                     </a>
                 </div>
             </div>
-            <div class="quad3Index"></div>
         </div>
     </main>
 
@@ -95,7 +76,7 @@
 
             <div>
                 <h3>Developed by</h2>
-                <img src="../Images/Index/42WaysTech_logo.png" width="150px">
+                    <img src="../Images/Index/42WaysTech_logo.png" width="150px">
             </div>
 
             <div class="horizontalRule"></div>
