Atualização pagina recursos

--- a/Html/no_mundo.html
+++ b/Html/no_mundo.html
@@ -25,6 +25,7 @@
                     <a class="menu" href="../Html/recursos.html">Recursos</a>
                     <a class="selectedMenu" href="../Html/no_mundo.html">No mundo</a>
                     <a class="menu" href="../Html/sobre_nos.html">Sobre nós</a>
+                    <a class="menu" href="../Html/contato.html">Contato</a>
                 </div>
             </div>
             <div class="divisor"></div>
