--- a/Html/sobre_nos.html
+++ b/Html/sobre_nos.html
@@ -25,6 +25,7 @@
                     <a class="menu" href="../Html/recursos.html">Recursos</a>
                     <a class="menu" href="../Html/no_mundo.html">No mundo</a>
                     <a class="selectedMenu" href="../Html/sobre_nos.html">Sobre nós</a>
+                    <a class="menu" href="../Html/contato.html">Contato</a>
                 </div>
             </div>
 
@@ -40,51 +41,73 @@
                 <h2>Nossa História</h2>
                 <br>
                 <br>
-                <p>A população mundial vai aumentar nos próximos anos e a estimativa da ONU é que em 2050 a população
-                    mundial chegue a quase 10 bilhões de pessoas. No entanto, as preocupações e os cuidados com isso
-                    começam hoje. E uma das perguntas a serem respondidas é: “Como vamos alimentar toda essa população
-                    sem aumentar exageradamente a área dedicada a agricultura já existente e sem piorar a situação
-                    climática do planeta.”. A resposta é complexa, e a estimativa é que necessitaríamos aumentar a
-                    produção de alimentos em mais de 70% com base no que produzimos hoje. Mas um dos pontos que ganha a
-                    atenção para ajudar a resolver esse problema, é sobre como podemos melhorar a eficiência de
-                    produção, e com isso, o uso das novas tecnologias de IA ganhão um papel bastante importante. Na
-                    verdade, as inteligências artificiais e o uso de outras tecnologias têm todo o poder para melhorar
-                    tanto na eficiência, quanto em ajudar a produzir mais alimentos, ocupando menos espaço e gastando
-                    menor recursos essenciais, como água, por exemplo.</p>
+                <p>A 42 Ways Tech é um empresa formada por alunos de ADS da faculdade FIAP. Apaixonados por tecnologia,
+                    decidimos trazer inovação para o setor agrícola, combinando inteligência artificial com agricultura,
+                    queremos impulsionar o setor para um futuro sustentável e mais eficiente. </p><br>
+
+                <p> Assim nasce a FuturaAI, um portal responsavel por trazer o que há de mais morderno no uso das IA na
+                    agricultura, te deixando
+                    mais próximo do que tem de mais inovador no mundo.</p>
             </div>
         </div>
 
-        <div class="team">
+        <div class="team ">
             <h2>Equipe</h2>
             <div class="containerTeamCards">
                 <div class="teamCard">
-                    <div class="cardPhoto"></div>
+                    <div class="cardPhoto backgroundCard1"></div>
                     <h4>Caique De Moura</h4>
                     <H5>RM99474</H5>
                 </div>
                 <div class="teamCard">
-                    <div class="cardPhoto"></div>
+                    <div class="cardPhoto backgroundCard2"></div>
                     <h4>Diego Olivera</h4>
                     <H5>RM550309</H5>
                 </div>
                 <div class="teamCard">
-                    <div class="cardPhoto"></div>
+                    <div class="cardPhoto backgroundCard3"></div>
                     <h4>Matheus Valero</h4>
                     <H5>RM99669</H5>
                 </div>
                 <div class="teamCard">
-                    <div class="cardPhoto"></div>
+                    <div class="cardPhoto backgroundCard4"></div>
                     <h4>Paulo Cesar</h4>
                     <H5>RM99615</H5>
                 </div>
                 <div class="teamCard">
-                    <div class="cardPhoto"></div>
-                    <h4>Saulos Gomes</h4>
-                        <H5>RM99878</H5>
+                    <div class="cardPhoto backgroundCard5"></div>
+                    <h4>Saulo Gomes</h4>
+                    <H5>RM99878</H5>
                 </div>
             </div>
         </div>
+
     </main>
 
+    <footer>
+        <div class="footer">
+
+            <div>
+                <h3>Developed by</h2>
+                    <img src="../Images/Index/42WaysTech_logo.png" width="150px">
+            </div>
+
+            <div class="horizontalRule"></div>
+
+            <div class="contatos">
+                <div>
+                    <h3>Nos siga nas nossas redes sociais:</h2>
+                </div>
+
+                <div class="contatosN">
+                    <img class="selectContatos" src="../Images/Index/facebook_logo.png" width="50px">
+                    <img src="../Images/Index/instagram_logo.webp" width="50px">
+                    <img src="../Images/Index/twitter_logo.png" width="50px">
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </body>
+
 </html>
