--- a/Html/contato.html
+++ b/Html/contato.html
@@ -33,44 +33,34 @@
     </header>
 
     <main class="centerMain">
-        <div class="banner bannerNoMundoPg"></div>
-
-        <div class="frame">
-            <div class="quadNoMundoImg1"></div>
-
-            <div class="quad2">
-                <h2>Japão</h2>
-                <br>
-                <br>
-                <p>A inteligência artificial generativa está sendo amplamente adotada por vários países ao redor do
-                    mundo para impulsionar a agricultura. Um exemplo notável é o Japão, que tem usado IA generativa para
-                    melhorar a eficiência e a produtividade na produção de alimentos. Nesse sentido, os agricultores
-                    japoneses estão utilizando algoritmos de aprendizado de máquina para analisar dados agrícolas, como
-                    condições climáticas, qualidade do solo e histórico de colheitas. Com base nesses dados, os sistemas
-                    de IA generativa são capazes de gerar recomendações personalizadas para otimizar a irrigação, o uso
-                    de fertilizantes e o controle de pragas. Essa abordagem tem ajudado os agricultores a tomar decisões
-                    mais informadas e a alcançar melhores resultados na produção de alimentos.</p><br>
-            </div>
-        </div>
+        <div class="banner bannerContato"></div>
 
         <div class="frameBorder">
-            <div class="quad2">
-                <h2>Holanda</h2>
-                <br>
-                <br>
-                <p>Outro país que está se destacando no uso de IA generativa na agricultura é a Holanda. Com seu
-                    compromisso em impulsionar a agricultura sustentável e enfrentar os desafios de produzir alimentos
-                    em áreas urbanas densas, a Holanda tem empregado IA generativa para aprimorar a produção em estufas.
-                    Por meio de sensores e algoritmos avançados, a IA generativa monitora e controla diversos fatores,
-                    como temperatura, umidade, luz e qualidade do ar nas estufas. Com base nesses dados, a IA é capaz de
-                    otimizar automaticamente o ambiente de cultivo, proporcionando condições ideais para o crescimento
-                    das plantas. Além disso, a IA generativa também auxilia no planejamento de culturas, maximizando o
-                    uso do espaço disponível e minimizando o desperdício de recursos. Essas aplicações têm contribuído
-                    significativamente para aumentar a eficiência da agricultura em ambientes urbanos na Holanda.</p>
-                <br>
-            </div>
-            <div class="quadNoMundoImg2"></div>
+
+            <form>
+                <h2>Envie sua dúvida ou sugestão!</h2> <br>
+                <label for="nome">Nome:</label><br>
+                <input type="text" id="nome" name="nome" required><br><br>
+
+                <label for="telefone">Telefone:</label><br>
+                <input type="tel" id="telefone" name="telefone" required><br><br>
+
+                <label for="email">Email:</label><br>
+                <input type="email" id="email" name="email" required><br><br>
+
+                <label for="assunto">Assunto:</label><br>
+                <input type="text" id="assunto" name="assunto" required><br><br>
+
+                <label for="mensagem">Mensagem:</label><br>
+                <textarea id="mensagem" name="mensagem" rows="5" required></textarea><br><br>
+
+                <div class="centerButton">
+                    <input type="submit" value="Enviar">
+                </div>
+
+            </form>
         </div>
+
     </main>
 
     <footer>
